[package]
name = "wei-wsl"
version = "0.1.0"
edition = "2021"

description = "wei wsl"
documentation = "https://github.com/zuiyue-com/wei-wsl"
homepage = "https://github.com/zuiyue-com/wei-wsl"
license = "MIT OR Apache-2.0"

[dependencies]
wei-log = "0.2.10"
wei-env = "0.2.13"
wei-run = "0.3"
wei-windows ={ path = "../wei-windows" }

serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ureq = "2.9.1"